--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <p>đây là vùng nội dung có thể thay đổi kích thước, giữ chuột vào phía dưới bên phải để thay đôi</p>
 </body>
 </html>
