--- a/index.html
+++ b/index.html
@@ -9,4 +9,7 @@
 <body>
     <p>đây là vùng nội dung có thể thay đổi kích thước, giữ chuột vào phía dưới bên phải để thay đôi</p>
 </body>
+<script>
+    console.log(typeof HTMLElement);
+</script>
 </html>
