--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <div class="blue">box 1</div>
+        <div class="red">box 2</div>
+        <div class="yellow">box 3</div>
+    </div>
 </body>
 </html>
