--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <span>flex-wrap</span>
+    <div class="flex-demo flex-wrap">
+        <div class="bg-coral">A</div>
+        <div class="bg-lightblue">B</div>
+        <div class="bg-khaki">C</div>
+        <div class="bg-pink">D</div>
+        <div class="bg-lightgrey">E</div>
+        <div class="bg-lightgreen">F</div>
+    </div>
+
+    <span>flex-flow</span>
+    <div class="flex-demo flex-flow">
+        <div class="bg-coral">A</div>
+        <div class="bg-lightblue">B</div>
+        <div class="bg-khaki">C</div>
+        <div class="bg-pink">D</div>
+        <div class="bg-lightgrey">E</div>
+        <div class="bg-lightgreen">F</div>
+    </div>
 </body>
 </html>
