--- a/index.html
+++ b/index.html
@@ -9,22 +9,32 @@
 <body>
     <span>flex-wrap</span>
     <div class="flex-demo flex-wrap">
-        <div class="bg-coral">A</div>
-        <div class="bg-lightblue">B</div>
-        <div class="bg-khaki">C</div>
-        <div class="bg-pink">D</div>
-        <div class="bg-lightgrey">E</div>
-        <div class="bg-lightgreen">F</div>
+        <div class="bg-coral"></div>
+        <div class="bg-lightblue"></div>
+        <div class="bg-khaki"></div>
+        <div class="bg-pink"></div>
+        <div class="bg-lightgrey"></div>
+        <div class="bg-lightgreen"></div>
     </div>
 
     <span>flex-flow</span>
     <div class="flex-demo flex-flow">
-        <div class="bg-coral">A</div>
-        <div class="bg-lightblue">B</div>
-        <div class="bg-khaki">C</div>
-        <div class="bg-pink">D</div>
-        <div class="bg-lightgrey">E</div>
-        <div class="bg-lightgreen">F</div>
+        <div class="bg-coral"></div>
+        <div class="bg-lightblue"></div>
+        <div class="bg-khaki"></div>
+        <div class="bg-pink"></div>
+        <div class="bg-lightgrey"></div>
+        <div class="bg-lightgreen"></div>
+    </div>
+
+    <span>flex-direction</span>
+    <div class="flex-demo flex-direction">
+        <div class="bg-coral"></div>
+        <div class="bg-lightblue"></div>
+        <div class="bg-khaki"></div>
+        <div class="bg-pink"></div>
+        <div class="bg-lightgrey"></div>
+        <div class="bg-lightgreen"></div>
     </div>
 </body>
 </html>
