--- a/index.html
+++ b/index.html
@@ -9,4 +9,8 @@
 <body>
     
 </body>
+<script>
+    const vh = window.innerHeight * 0.01;
+    document.documentElement.style.setProperty('--vh', `${vh}px`);
+</script>
 </html>
