--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div>container 1</div>
+        <div>container 2</div>
+    </div>
+
+    <br>
+
+    <div class="link">
+        <a href="#" class="link-1">link 1</a>
+        <a href="#" class="link-2">link 2</a>
+    </div>
+
+    <br>
+
+    <div class="selector-plus">
+        <div class="box-1">box 1</div>
+        <div class="box-2">box 2</div>
+        <div class="box-3">box 3</div>
+    </div>
 </body>
 </html>
