--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
     <div class="container">
         <div>container 1</div>
@@ -26,5 +28,21 @@
         <div class="box-2">box 2</div>
         <div class="box-3">box 3</div>
     </div>
+
+    <div class="selector-than">
+        <ul>
+            <li>
+                List Item
+                <ul>
+                    <li> Child </li>
+                </ul>
+            </li>
+            <li> List Item </li>
+        </ul>
+        <ul>
+            <li></li>
+        </ul>
+    </div>
 </body>
+
 </html>
