--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <span>flex-direction</span>
+    <div class="flex-demo flex-direction">
+        <div class="bg-coral"></div>
+        <div class="bg-lightblue"></div>
+        <div class="bg-khaki"></div>
+        <div class="bg-pink"></div>
+        <div class="bg-lightgrey"></div>
+        <div class="bg-lightgreen"></div>
+    </div>
+
     <span>flex-wrap</span>
     <div class="flex-demo flex-wrap">
         <div class="bg-coral"></div>
@@ -27,14 +37,14 @@
         <div class="bg-lightgreen"></div>
     </div>
 
-    <span>flex-direction</span>
-    <div class="flex-demo flex-direction">
-        <div class="bg-coral"></div>
-        <div class="bg-lightblue"></div>
-        <div class="bg-khaki"></div>
-        <div class="bg-pink"></div>
-        <div class="bg-lightgrey"></div>
-        <div class="bg-lightgreen"></div>
+    <span>order</span>
+    <div class="flex-demo order">
+        <div class="bg-coral item1">1</div>
+        <div class="bg-lightblue item2">2</div>
+        <div class="bg-khaki item3">3</div>
+        <div class="bg-pink item4">4</div>
+        <div class="bg-lightgrey item5">5</div>
+        <div class="bg-lightgreen item6">6</div>
     </div>
 </body>
 </html>
