--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <p>HTML cực kỳ dễ học.       Đồng thời, 
+        chúng tôi xin giới thiệu 
+  
+        đến các bạn loạt Tài liệu hướng dẫn    học 
+        HTML đã được     biên soạn kỹ lưỡng theo trình tự từ 
+        cơ bản đến nâng cao kèm 
+        theo nhiều 
+        ví dụ minh họa    đơn giản dễ hiểu. Hứa hẹn 
+        sẽ giúp bạn đọc dễ dàng tiếp thu ngôn 
+        ngữ HTML trong thời gian ngắn 
+  
+  
+      nhất với khối lượng kiến thức đầy đủ nhất.</p>
 </body>
 </html>
